--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Web Code Slide 1</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -16,6 +16,15 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<section>
+					<a href="https://revealjs.com">
+						<img src="img/logoweb.jpg" alt="reveal.js logo" style="height: 203px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+					</a>
+					<h3>WEB CODE</h3>
+					<p>
+						<small> <a href="https://scuola.mohole.it/web-e-digital-media/">Web e Digital Media</a> by <a href="https://scuola.mohole.it">Scuola Mohole</a> 2020/2021</small>
+					</p>
+				</section>
 				<section>Slide 1</section>
 				<section>Slide 2</section>
 			</div>
