--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<small> <a href="https://scuola.mohole.it/web-e-digital-media/">Web e Digital Media</a> by <a href="https://scuola.mohole.it">Scuola Mohole</a> 2020/2021</small>
 					</p>
 				</section>
-				<section>Slide 1</section>
+				<section>welcome</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
