--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
+		<!-- Theme -->
+		<!-- 
+			Name	Effect
+			black	Black background, white text, blue links (default)
+			white	White background, black text, blue links
+			league	Gray background, white text, blue links
+			beige	Beige background, dark text, brown links
+			sky	Blue background, thin dark text, blue links
+			night	Black background, thick white text, orange links
+			serif	Cappuccino background, gray text, brown links
+			simple	White background, black text, blue links
+			solarized	Cream-colored background, dark green text, blue links
+			blood	Dark background, thick white text, red links
+			moon	Dark blue background, thick grey text, blue links
+
+		 -->
+		<link rel="stylesheet" href="dist/theme/night.css" id="theme">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
@@ -25,8 +41,13 @@
 						<small> <a href="https://scuola.mohole.it/web-e-digital-media/">Web e Digital Media</a> by <a href="https://scuola.mohole.it">Scuola Mohole</a> 2020/2021</small>
 					</p>
 				</section>
-				<section>welcome</section>
-				<section>Slide 2</section>
+				<section>benvenuti</section>
+				<section>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/UMNFehJIi0E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</section>
+				<section>
+					<p>Queste slide sono realizzate </p>
+				</section>
 			</div>
 		</div>
 
