--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
 					</p>
 				</section>
 				<section>welcome</section>
-				<section>Slide 2</section>
+				<section>
+					<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/56365546?#t=4m30sautoplay=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+				</section>
+				<section>
+					<img src="img/webserver-cern.jpg" width="500" alt="">
+					<p>Il WWW è una rete di computer mondiale ad accesso pubblico attualmente rappresentante il principale mezzo di comunicazione di massa. <small><p>da Wikipedia</p></small>
+				</p></section>
 			</div>
 		</div>
 
