--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
 					<img src="img/webserver-cern.jpg" width="500" alt="">
 					<p>Il WWW è una rete di computer mondiale ad accesso pubblico attualmente rappresentante il principale mezzo di comunicazione di massa. <small><p>da Wikipedia</p></small>
 				</p></section>
+				<section data-background="img/www.jpg">
+					<ul>
+						<li>business</li>
+						<li>news</li>
+						<li>bitcoin</li>
+						<li>pandemy</li>
+						<li>fake news</li>
+						<li>onlus</li>
+						<li>black matters</li>
+						<li>memes</li>
+						<li><strong>TU</strong></li>
+					</ul>
+
+				</section>
 			</div>
 		</div>
 
