--- a/index.html
+++ b/index.html
@@ -51,17 +51,42 @@
 					<p>Il WWW è una rete di computer mondiale ad accesso pubblico attualmente rappresentante il principale mezzo di comunicazione di massa. <small><p>da Wikipedia</p></small>
 				</p></section>
 				<section data-background="img/www.jpg">
-					<ul>
-						<li>business</li>
-						<li>news</li>
-						<li>bitcoin</li>
-						<li>pandemy</li>
-						<li>fake news</li>
-						<li>onlus</li>
-						<li>black matters</li>
-						<li>memes</li>
-						<li><strong>TU</strong></li>
-					</ul>
+					<!-- <small>
+						<ul>
+							<li>business</li>
+							<li>news</li>
+							<li>bitcoin</li>
+							<li>pandemy</li>
+							<li>le ricette di benedetta</li>
+							<li>instagram</li>
+							<li>inps</li>
+							<li>AC/DC</li>
+							<li>elon musk</li>
+							<li>fake news</li>
+							<li>onlus</li>
+							<li>netflix</li>
+							<li>ecommerce</li>
+							<li>black matters</li>
+							<li>memes</li>
+							<li><strong>TU</strong></li>
+						</ul>
+					</small> -->
+					<small>
+							<p>news</p>
+							<p>bitcoin</p>
+							<p>pandemy</p>
+							<p>le ricette di benedetta</p>
+							<p>instagram</p>
+							<p>AC/DC</p>
+							<p>elon musk</p>
+							<p>fake news</p>
+							<p>onlus</p>
+							<p>netflix</p>
+							<p>black matters</p>
+							<p>memes</p>
+							<p><strong>TU</strong></p>
+					
+					</small>
 
 				</section>
 			</div>
