add sections and my css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
+		<link rel="stylesheet" href="css/mystyle.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -51,26 +52,6 @@
 					<p>Il WWW è una rete di computer mondiale ad accesso pubblico attualmente rappresentante il principale mezzo di comunicazione di massa. <small><p>da Wikipedia</p></small>
 				</p></section>
 				<section data-background="img/www.jpg">
-					<!-- <small>
-						<ul>
-							<li>business</li>
-							<li>news</li>
-							<li>bitcoin</li>
-							<li>pandemy</li>
-							<li>le ricette di benedetta</li>
-							<li>instagram</li>
-							<li>inps</li>
-							<li>AC/DC</li>
-							<li>elon musk</li>
-							<li>fake news</li>
-							<li>onlus</li>
-							<li>netflix</li>
-							<li>ecommerce</li>
-							<li>black matters</li>
-							<li>memes</li>
-							<li><strong>TU</strong></li>
-						</ul>
-					</small> -->
 					<small>
 							<p>news</p>
 							<p>bitcoin</p>
@@ -85,10 +66,38 @@
 							<p>black matters</p>
 							<p>memes</p>
 							<p><strong>TU</strong></p>
-					
 					</small>
-
 				</section>
+				<section>
+					
+							<div style="margin: 0;"><img src="img/simpson.jpg" alt=""></div>
+							<div style="margin: 0;"><img src="img/main-desktop-browser-logos.png" width="400" alt=""></div>
+							<div style="margin: 0;"><img src="img/html5-css-javascript-logos.png" width="400" alt=""></div>
+		
+				</section>
+
+				<section data-background-iframe="https://www.w3.org/" data-background-interactive>
+					<div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(41, 2, 216, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>W3C</h2>
+						<p>Il W3C è un consorzio che stabilisce gli standard di sviluppo web al quale hanno aderito Google, Mozilla, Apple, Microsoft e tanti altri. </p>
+					</div>
+				</section>
+
+				<section data-background="img/mdn.png">
+					<div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgb(104, 104, 237); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>MDN</h2>
+						<p><a href="https://developer.mozilla.org/it/">Mozilla Developer Network</a> , riconosciuta come piattaforma di documentazione ufficiale dai principali produttori di browser, vedi <a href="https://www.zdnet.com/article/developers-rejoice-microsoft-google-mozilla-are-putting-all-their-web-api-docs-in-one-place/">qui</a> </p>
+					</div>
+				</section>
+
+
+
+
+
+
+
+
+
 			</div>
 		</div>
 
