--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
 					</div>
 				</section>
 
+				<section data-background="img/visualcode.png">
+					
+					<div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgb(26, 26, 70); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>Editors</h2>
+						<p>Per scrivere codice web basterebbe un semplice editor di testo come Blocco Note, ma oggi ci sono editor avanzati che ci possono aiutare tantissimo. Uno dei più potenti e utilizzati è <a href="	https://code.visualstudio.com/">Visual Code Studio</a> </p>
+					</div>
+				</section>
+
+				<section data-background="#FFFFFF">
+					<img src="img/exploring.png" alt="">
+				
+				</section>
+
 
 
 
