--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					</div>
 				</section>
 
-				<section style="padding: 10px;" data-background="img/mdn.png">
+				<section data-background="img/mdn.png">
 					<div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgb(104, 104, 237); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>MDN</h2>
 						<p><a href="https://developer.mozilla.org/it/">Mozilla Developer Network</a> , riconosciuta come piattaforma di documentazione ufficiale dai principali produttori di browser, vedi <a href="https://www.zdnet.com/article/developers-rejoice-microsoft-google-mozilla-are-putting-all-their-web-api-docs-in-one-place/">qui</a> </p>
