--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<img src="img/exploring.png" alt="">
 					<p class="fragment" style="color: #444444">
 						<small>
-							Slides fatte unicamente di codice web con <a href="https://revealjs.com/">Reveal.js</a>
+							Slides fatte di puro codice web, sfornate con <a href="https://revealjs.com/">Reveal.js</a>
 						</small>	
 					
 				
