--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</a>
 					<h3>WEB CODE</h3>
 					<p>
-						<small> <a href="https://scuola.mohole.it/web-e-digital-media/">Web e Digital Media</a> by <a href="https://scuola.mohole.it">Scuola Mohole</a> 2020/2021</small>
+						<small> <a href="https://scuola.mohole.it/web-e-digital-media/">Information Technology</a> by <a href="https://scuola.mohole.it">Scuola Mohole</a> 2021/2022</small>
 					</p>
 					
 				</section>
