--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		
 				</section>
 
-				<section data-background-iframe="https://www.w3.org/" data-background-interactive>
+				<section>
 					<div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(41, 2, 216, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>W3C</h2>
 						<p>Il W3C è un consorzio che stabilisce gli standard di sviluppo web al quale hanno aderito Google, Mozilla, Apple, Microsoft e tanti altri. </p>
